# MARIO_Porting

./: README.md  installations.sh
1_chatter_listener/: README.md
1_chatter_listener/scripts/: listener.py  talker.py
2_simulation_dh/: CMakeLists.txt  README.md  package.xml
2_simulation_dh/launch/: dh_transformation_visualization.launch.py
2_simulation_dh/rviz/: rviz_config.rviz
2_simulation_dh/scripts/: broadcaster.py
3_simulation_rviz/: CMakeLists.txt  README.md  package.xml
3_simulation_rviz/scripts/: rviz.py
4_simulation_gazebo/: CMakeLists.txt  README.md  package.xml
4_simulation_gazebo/scripts/: forward_kinematics.py  inverse_kinematics.py
activities/turtlesim/: CMakeLists.txt  README.md  package.xml
activities/turtlesim/scripts/: draw_circle.py
firmware/1_servo_set_zero/main/: main.c
firmware/2_servo_sweep/main/: main.c
firmware/3_microros_rviz/: CMakeLists.txt  README.md
firmware/3_microros_rviz/main/: main.c
firmware/4_microros_gazebo/: LICENSE  README.md
firmware/4_microros_gazebo/main/: Kconfig.projbuild  main.c
firmware/5_servo_test_webserver/main/: main.c
